[gd_scene load_steps=2 format=3 uid="uid://shop001"]

[ext_resource type="Script" path="res://TitleScreen/shop.gd" id="1_shop"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.1, 0.12, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 15.0
offset_right = 80.0
offset_bottom = 45.0
text = "UPGRADE SHOP"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 40.0
text = "Gold: 0"
horizontal_alignment = 2

[node name="UpgradeContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 60.0
offset_right = 320.0
offset_bottom = 320.0
columns = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
